<?xml version="1.0" encoding="utf-8"?>
<!--=========================================================================-->
<!--                                                                         -->
<!-- Blixel                                                                  -->
<!-- Copyright (c) 2020 ardnew [https://github.com/ardnew]                   -->
<!--                                                                         -->
<!--       Permission is hereby granted, free of charge, to any person       -->
<!--       obtaining a copy of this software and associated                  -->
<!--       documentation files (the "Software"), to deal in the              -->
<!--       Software without restriction, including without limitation        -->
<!--       the rights to use, copy, modify, merge, publish, distribute,      -->
<!--       sublicense, and/or sell copies of the Software, and to            -->
<!--       permit persons to whom the Software is furnished to do so,        -->
<!--       subject to the following conditions:                              -->
<!--                                                                         -->
<!--       The above copyright notice and this permission notice shall       -->
<!--       be included in all copies or substantial portions of the          -->
<!--       Software.                                                         -->
<!--                                                                         -->
<!--       THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY         -->
<!--       KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE        -->
<!--       WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR           -->
<!--       PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS        -->
<!--       OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR          -->
<!--       OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR        -->
<!--       OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE         -->
<!--       SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.            -->
<!--                                                                         -->
<!--=========================================================================-->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".activity.main.MainActivity">

    <LinearLayout
        android:id="@+id/home_fragment_vertical_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/home_fragment_connect_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            app:cardBackgroundColor="@color/color_transparent"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/background_home_card" >

                <LinearLayout
                    android:id="@+id/home_fragment_connect_card_disconnected_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/home_fragment_connect_card_disconnected_image_view"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginHorizontal="8dp"
                        android:contentDescription="@string/home_fragment_connect_card_disconnected_image_description"
                        app:srcCompat="@drawable/ic_connect" />

                    <TextView
                        android:id="@+id/home_fragment_connect_card_disconnected_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:text="@string/home_fragment_connect_card_disconnected_label"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_fragment_connect_card_connected_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/home_fragment_connect_card_connected_image_view"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/home_fragment_connect_card_connected_image_description"
                        app:srcCompat="@drawable/ic_led" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-2dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/home_fragment_connect_card_connected_device_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/home_fragment_connect_card_connected_device_prompt"
                                android:layout_width="56dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center_vertical"
                                android:text="@string/home_fragment_connect_card_connected_device_prompt"
                                android:textAlignment="textEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                            <TextView
                                android:id="@+id/home_fragment_connect_card_connected_device_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start|center_vertical"
                                android:layout_marginStart="8dp"
                                android:text="@string/home_fragment_connect_card_connected_device_label"
                                android:textAlignment="textStart"
                                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                                android:textColor="@color/color_primary_highlight" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_fragment_connect_card_connected_address_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/home_fragment_connect_card_connected_address_prompt"
                                android:layout_width="56dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center_vertical"
                                android:text="@string/home_fragment_connect_card_connected_address_prompt"
                                android:textAlignment="textEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                            <TextView
                                android:id="@+id/home_fragment_connect_card_connected_address_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start|center_vertical"
                                android:layout_marginStart="8dp"
                                android:text="@string/home_fragment_connect_card_connected_address_label"
                                android:textAlignment="textStart"
                                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                                android:textColor="@color/color_primary_highlight" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_fragment_connect_card_connected_chipset_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/home_fragment_connect_card_connected_chipset_prompt"
                                android:layout_width="56dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center_vertical"
                                android:text="@string/home_fragment_connect_card_connected_chipset_prompt"
                                android:textAlignment="textEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                            <TextView
                                android:id="@+id/home_fragment_connect_card_connected_chipset_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start|center_vertical"
                                android:layout_marginStart="8dp"
                                android:text="@string/home_fragment_connect_card_connected_chipset_label"
                                android:textAlignment="textStart"
                                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                                android:textColor="@color/color_primary_highlight" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_fragment_connect_card_connected_length_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/home_fragment_connect_card_connected_length_prompt"
                                android:layout_width="56dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end|center_vertical"
                                android:text="@string/home_fragment_connect_card_connected_length_prompt"
                                android:textAlignment="textEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                            <TextView
                                android:id="@+id/home_fragment_connect_card_connected_length_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start|center_vertical"
                                android:layout_marginStart="8dp"
                                android:text="@string/home_fragment_connect_card_connected_length_label"
                                android:textAlignment="textStart"
                                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                                android:textColor="@color/color_primary_highlight" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/home_fragment_connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="112dp"
            android:backgroundTint="@color/button_surface"
            android:text="@string/home_fragment_connect_button_disconnected"
            android:textColor="@color/button_text" />

    </LinearLayout>

    <ImageView
        android:id="@+id/home_fragment_background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".1"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_blixel_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
